contracts/credit/tests/snapshots/auth_snap__block_borrower_auth_snap.snap
---
source: contracts/credit/tests/auth_snap.rs
assertion_line: 627
expression: auths.last().unwrap()
---
(
    Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2KM),
    AuthorizedInvocation {
        function: Contract(
            (
                Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
                Symbol(block_borrower),
                Vec(Ok(Address(obj#547))),
            ),
        ),
        sub_invocations: [],
    },
)
