contracts/credit/tests/snapshots/auth_snap__bulk_block_borrowers_auth_snap.snap
---
source: contracts/credit/tests/auth_snap.rs
assertion_line: 661
expression: auths.last().unwrap()
---
(
    Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2KM),
    AuthorizedInvocation {
        function: Contract(
            (
                Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
                Symbol(bulk_block_borrowers),
                Vec(Ok(Vec(obj#551))),
            ),
        ),
        sub_invocations: [],
    },
)
