contracts/credit/tests/snapshots/auth_snap__execute_treasury_withdrawal_auth_snap.snap
---
source: contracts/credit/tests/auth_snap.rs
assertion_line: 576
expression: auths.last().unwrap()
---
(
    Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2KM),
    AuthorizedInvocation {
        function: Contract(
            (
                Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
                Symbol(execute_treasury_withdrawal),
                Vec(),
            ),
        ),
        sub_invocations: [],
    },
)
