contracts/credit/tests/snapshots/auth_snap__freeze_borrower_until_auth_snap.snap
---
source: contracts/credit/tests/auth_snap.rs
assertion_line: 678
expression: auths.last().unwrap()
---
(
    Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2KM),
    AuthorizedInvocation {
        function: Contract(
            (
                Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
                Symbol(freeze_borrower_until),
                Vec(Ok(Address(obj#557)), Ok(U64(13600))),
            ),
        ),
        sub_invocations: [],
    },
)
