contracts/credit/tests/snapshots/auth_snap__propose_treasury_withdrawal_auth_snap.snap
---
source: contracts/credit/tests/auth_snap.rs
assertion_line: 558
expression: auths.last().unwrap()
---
(
    Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2KM),
    AuthorizedInvocation {
        function: Contract(
            (
                Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
                Symbol(propose_treasury_withdrawal),
                Vec(),
            ),
        ),
        sub_invocations: [],
    },
)
