contracts/credit/tests/snapshots/auth_snap__set_borrower_rate_floor_auth_snap.snap
---
source: contracts/credit/tests/auth_snap.rs
assertion_line: 191
expression: auths.last().unwrap()
---
(
    Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2KM),
    AuthorizedInvocation {
        function: Contract(
            (
                Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
                Symbol(set_borrower_rate_floor),
                Vec(Ok(Address(obj#541)), Ok(U32(100))),
            ),
        ),
        sub_invocations: [],
    },
)
