contracts/credit/tests/snapshots/auth_snap__set_bounty_auth_snap.snap
---
source: contracts/credit/tests/auth_snap.rs
assertion_line: 542
expression: auths.last().unwrap()
---
(
    Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2KM),
    AuthorizedInvocation {
        function: Contract(
            (
                Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
                Symbol(set_bounty),
                Vec(Ok(Address(obj#539))),
            ),
        ),
        sub_invocations: [],
    },
)
