contracts/credit/tests/snapshots/auth_snap__set_penalty_surcharge_bps_auth_snap.snap
---
source: contracts/credit/tests/auth_snap.rs
assertion_line: 207
expression: auths.last().unwrap()
---
(
    Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2KM),
    AuthorizedInvocation {
        function: Contract(
            (
                Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
                Symbol(set_penalty_surcharge_bps),
                Vec(Ok(U32(500))),
            ),
        ),
        sub_invocations: [],
    },
)
