contracts/credit/tests/snapshots/auth_snap__set_rate_change_limits_auth_snap.snap
---
source: contracts/credit/tests/auth_snap.rs
assertion_line: 183
expression: auths.last().unwrap()
---
(
    Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2KM),
    AuthorizedInvocation {
        function: Contract(
            (
                Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
                Symbol(set_rate_change_limits),
                Vec(Ok(U32(500)), Ok(U64(3600))),
            ),
        ),
        sub_invocations: [],
    },
)
