contracts/credit/tests/snapshots/auth_snap__set_treasury_auth_snap.snap
---
source: contracts/credit/tests/auth_snap.rs
assertion_line: 526
expression: auths.last().unwrap()
---
(
    Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2KM),
    AuthorizedInvocation {
        function: Contract(
            (
                Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
                Symbol(set_treasury),
                Vec(Ok(Address(obj#539))),
            ),
        ),
        sub_invocations: [],
    },
)
